<resources>
    <!--App name-->
    <string name="app_name">yaTXT App</string>

    <!--Form activity-->
    <string name="question1">В каком городе вы родились?</string>
    <string name="question1_hint">Москва</string>

    <string name="question2">Ваш гендер?</string>
    <string name="question2_answer1">мужской</string>
    <string name="question2_answer2">женский</string>

    <string name="question3">Ваш возраст?</string>
    <string name="question3_hint">18</string>

    <string name="question4">Какими языками вы владеете?</string>
    <string name="question5">Какие музыкальные жанры предпочитаете?</string>

    <string name="questionnaire">Анкета</string>
    <string name="settings">Настройки</string>
    <string name="approve">Подтвердить</string>
    <string name="library">Библиотека</string>
    <string name="registration">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="email">Почта</string>
    <string name="author">Автор</string>
    <string name="read">Читать</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="genre">Жанр</string>
    <string name="password">Пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="registration_hint">Ещё не зарегистрированы?</string>
    <string name="invalid_username">Неверное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть длиннее 5 символов</string>
    <string name="login_failed">"Ошибка авторизации"</string>
    <string name="facebook_app_id">3598244836870763</string>
    <string name="fb_login_protocol_scheme">fb3598244836870763</string>

    <string name="my_books">Читаю сейчас</string>
    <string name="recommendation">Рекомендации</string>


    <!--Settings activity-->
    <string name="settings_text_main">Настройки</string>
    <string name="settings_text1">Настройка профиля</string>
    <string name="settings_text2">Уведомления</string>
    <string name="settings_text3">О приложении</string>
    <string name="settings_text4">Связаться с разработчиками</string>
    <string name="settings_text5">Выйти из аккаунта</string>
</resources>
